[package]
name = "webhooker"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["typed-header", "cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "limit", "set-header", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
argon2 = "0.5"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
sha2 = "0.10"
rand = "0.9"

# Crypto
aes-gcm = "0.10"
subtle = "2"

# Templates
askama = "0.15"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "form"] }

# Rate limiting
governor = "0.10"
dashmap = "6"

# Utilities
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
async-trait = "0.1"
ipnet = { version = "2", features = ["serde"] }
multer = "3"
hex = "0.4"
form_urlencoded = "1"
bytes = "1"
futures-util = "0.3"
hkdf = "0.12.4"
